Need to fix calendar events z-index

--- a/app/globals.css
+++ b/app/globals.css
@@ -127,6 +127,7 @@ body {
   width: 100% !important;
   background-color: red !important;
   padding-left: 4px !important;
+  z-index: 10 !important;
 }
 
 .rbc-events-container {
